--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <h1>Pokedex</h1>
+  <p class="loading"></p>
   <ul class="pokemon-list"></ul>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch-polyfill.js"></script>
