--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-  <h1>Pokedex</h1>
-  <p class="loading"></p>
-  <ul class="pokemon-list"></ul>
-  <script src="js/promise-polyfill.js"></script>
-  <script src="js/fetch-polyfill.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+  <body>
+    <div class="container">
+      <div class="column"></div>
+      <div class="column">
+        <h1 class="page-title">Pokedex</h1>
+        <p class="loading"></p>
+        <ul class="pokemon-list"></ul>
+        <!--<button id='show-modal'>Show modal</button>-->
+        <div id='modal-container'></div>
+      </div>
+      <div class="column"></div>
+    </div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+  </html>
